--- a/api/package.json
+++ b/api/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.26.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.18.2",
     "graphql": "^0.13.2",
     "graphql-scalars": "^1.22.4",
     "mongodb": "^3.7.4",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.0.3"
   }
 }
