--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.26.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
